force-app/main/default/objects/Price_Change_Log__c/Price_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of price changes for Price_List__c records.</description>
    <label>Price Change Log</label>
    <nameField>
        <label>Price Change Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>