force-app/main/default/objects/Price_Change_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <relationshipName>Price_Change_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category context for the price change audit trail.</description>
</CustomField>