force-app/main/default/objects/Price_Change_Log__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <label>Change Date</label>
    <type>DateTime</type>
</CustomField>