force-app/main/default/objects/Price_Change_Log__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <relationshipName>Price_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>