force-app/main/default/objects/Price_Change_Log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <relationshipName>Price_Change_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer context for the price change audit trail.</description>
</CustomField>