force-app/main/default/objects/Price_Change_Log__c/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <label>New Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>