force-app/main/default/objects/Price_Change_Log__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <type>Lookup</type>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipName>Price_Change_Logs</relationshipName>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>