force-app/main/default/objects/Price_Change_Log__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Priority level of the price list entry at the time of change.</description>
</CustomField>