force-app/main/default/objects/Price_Change_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Price_Change_Logs</relationshipName>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>