force-app/main/default/objects/Price_Change_Log__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <relationshipName>Price_Change_Logs_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>