force-app/main/default/objects/Price_Change_Log__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipName>Price_Change_Logs</relationshipName>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>