force-app/main/default/objects/Price_Change_Log__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Lookup</type>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Price Change Logs</relationshipLabel>
    <relationshipName>Price_Change_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory context for the price change audit trail.</description>
</CustomField>