force-app/main/default/objects/Price_Change_Log__c/listViews/All_Price_Changes.listView-meta.xml
<ListView>
    <fullName>All_Price_Changes</fullName>
    <label>All Price Changes</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Product_Ext__c</columns>
    <columns>Old_Price__c</columns>
    <columns>New_Price__c</columns>
    <columns>Channel__c</columns>
    <columns>Region__c</columns>
    <columns>Changed_By__c</columns>
    <columns>Change_Date__c</columns>
</ListView>