force-app/main/default/objects/Price_Change_Log__c/listViews/Recent_Price_Changes.listView-meta.xml
<ListView>
    <fullName>Recent_Price_Changes</fullName>
    <label>Recent Price Changes</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <columns>NAME</columns>
    <columns>Product_Ext__c</columns>
    <columns>Old_Price__c</columns>
    <columns>New_Price__c</columns>
    <columns>Channel__c</columns>
    <columns>Changed_By__c</columns>
    <columns>Change_Date__c</columns>
</ListView>